students/YarmolaAleksandr/task_02/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app23
  labels:
    org.bstu.course: "RSIOT"
    org.bstu.student.id: "220028"
    org.bstu.group: "AS-63"
    org.bstu.variant: "23"
    org.bstu.owner: "alexsandro007"
    org.bstu.student.slug: "AS63-220028-v23"
  annotations:
    org.bstu.student.fullname: "Ярмола Александр Олегович"
    org.bstu.group: "АС-63"
