students/YarmolaAleksandr/task_02/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: net-web23
  namespace: app23
  labels:
    app: web23
    org.bstu.course: "RSIOT"
    org.bstu.student.id: "220028"
    org.bstu.group: "AS-63"
    org.bstu.variant: "23"
    org.bstu.owner: "alexsandro007"
    org.bstu.student.slug: "AS63-220028-v23"
  annotations:
    org.bstu.student.fullname: "Ярмола Александр Олегович"
spec:
  type: ClusterIP
  selector:
    app: web23
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8043
  sessionAffinity: None
